--- a/package.json
+++ b/package.json
@@ -28,7 +28,16 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "mongodb": "^2.2.29",
+    "mongoose": "^4.11.0",
+    "connect-flash": "^0.1.1",
+    "express-messages": "^1.0.1",
+    "express-validator": "^3.2.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-http": "^0.3.0",
+    "multer": "^1.3.0"
   }
 
 }
