--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "jade": "~1.11.0",
+    "pug": "^2.0.0-rc.2",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "mongodb": "^2.2.29",
