--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
   "homepage": "https://github.com/mikemolenda/node-auth.git#readme",
   "dependencies": {
     "body-parser": "~1.17.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "pug": "^2.0.0-rc.2",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.15.3",
+    "express-validator": "^3.2.0",
     "mongodb": "^2.2.29",
     "mongoose": "^4.11.0",
-    "connect-flash": "^0.1.1",
-    "express-messages": "^1.0.1",
-    "express-validator": "^3.2.0",
+    "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
     "passport-http": "^0.3.0",
-    "multer": "^1.3.0"
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.0-rc.2",
+    "serve-favicon": "~2.4.2"
   }
 }
